# sdl_imgui_sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: windows-x86_64-llvm-mingw.cmake
src/: Renderer.cpp  Renderer.h  debug_settings.cpp  debug_settings.h  gui.cpp  gui.h  main.cpp  renderer.cpp  renderer.h
